controller/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opinai-controller
  namespace: opinai
  labels:
    app: opinai-controller
spec:
  selector:
    app: opinai-controller
  ports:
    - name: https
      port: 8443
      targetPort: 8443
      protocol: TCP
